I think I have cumulative cases and deaths working for NYT data!

--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -5518,7 +5518,10 @@
     "    deathsColumn = f\"{columnNameBase} Deaths\"\n",
     "    cumulativeCasesColumn = f\"{columnNameBase} Cumulative Cases\"\n",
     "    cumulativeDeathsColumn = f\"{columnNameBase} Cumulative Deaths\"\n",
-    "    if i > 0:\n",
+    "    if i == 0:\n",
+    "        gdf_NYTTimeSeries_NewCases[casesColumn] = gdf_NYTTimeSeries_NewCases[cumulativeCasesColumn] \n",
+    "        gdf_NYTTimeSeries_NewCases[deathsColumn] = gdf_NYTTimeSeries_NewCases[cumulativeDeathsColumn] \n",
+    "    else:\n",
     "        previousColumnBaseName = dts[i-1].strftime(\"%Y-%m-%d\")\n",
     "        previousCasesColumn = f\"{previousColumnBaseName} Cumulative Cases\"\n",
     "        previousDeathsColumn = f\"{previousColumnBaseName} Cumulative Deaths\"\n",
