--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
        "Name: fips, Length: 3193, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "3193"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
        "3233"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
        "855   POLYGON ((-86.74919 33.99760, -86.74902 33.997...  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
        "3193"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
        "3142"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,16 +387,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1dfcf00bac8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1dfb20bf288>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -426,25 +426,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_nytCountyData = df_nytCountyData.dropna(subset=[\"fips\"])"
+    "# KLUDGE- create custom fips for New York City and Kansas City"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_nytCountyData[\"fips\"] = df_nytCountyData[\"fips\"].astype(\"int\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -478,49 +469,187 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>21692</th>\n",
-       "      <td>2020-03-30</td>\n",
-       "      <td>King</td>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-01-21</td>\n",
+       "      <td>Snohomish</td>\n",
        "      <td>Washington</td>\n",
-       "      <td>53033</td>\n",
-       "      <td>2332</td>\n",
-       "      <td>152</td>\n",
+       "      <td>53061.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23855</th>\n",
-       "      <td>2020-03-31</td>\n",
-       "      <td>King</td>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-01-22</td>\n",
+       "      <td>Snohomish</td>\n",
        "      <td>Washington</td>\n",
-       "      <td>53033</td>\n",
-       "      <td>2332</td>\n",
-       "      <td>152</td>\n",
+       "      <td>53061.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19611</th>\n",
-       "      <td>2020-03-29</td>\n",
-       "      <td>King</td>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-01-23</td>\n",
+       "      <td>Snohomish</td>\n",
        "      <td>Washington</td>\n",
-       "      <td>53033</td>\n",
-       "      <td>2163</td>\n",
-       "      <td>146</td>\n",
+       "      <td>53061.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17632</th>\n",
-       "      <td>2020-03-28</td>\n",
-       "      <td>King</td>\n",
-       "      <td>Washington</td>\n",
-       "      <td>53033</td>\n",
-       "      <td>2079</td>\n",
-       "      <td>138</td>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-01-24</td>\n",
+       "      <td>Cook</td>\n",
+       "      <td>Illinois</td>\n",
+       "      <td>17031.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15740</th>\n",
-       "      <td>2020-03-27</td>\n",
-       "      <td>King</td>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-01-24</td>\n",
+       "      <td>Snohomish</td>\n",
        "      <td>Washington</td>\n",
-       "      <td>53033</td>\n",
-       "      <td>1830</td>\n",
-       "      <td>127</td>\n",
+       "      <td>53061.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         date     county       state     fips  cases  deaths\n",
+       "0  2020-01-21  Snohomish  Washington  53061.0      1       0\n",
+       "1  2020-01-22  Snohomish  Washington  53061.0      1       0\n",
+       "2  2020-01-23  Snohomish  Washington  53061.0      1       0\n",
+       "3  2020-01-24       Cook    Illinois  17031.0      1       0\n",
+       "4  2020-01-24  Snohomish  Washington  53061.0      1       0"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_nytCountyData.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_nytCountyData.loc[(df_nytCountyData.county==\"New York City\"),\"fips\"]=0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_nytCountyData.loc[(df_nytCountyData.county==\"Kansas City\"),\"fips\"]=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_nytCountyData = df_nytCountyData.dropna(subset=[\"fips\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_nytCountyData[\"fips\"] = df_nytCountyData[\"fips\"].astype(\"int\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>county</th>\n",
+       "      <th>state</th>\n",
+       "      <th>fips</th>\n",
+       "      <th>cases</th>\n",
+       "      <th>deaths</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>37185</th>\n",
+       "      <td>2020-04-06</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>0</td>\n",
+       "      <td>68776</td>\n",
+       "      <td>2738</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34709</th>\n",
+       "      <td>2020-04-05</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>0</td>\n",
+       "      <td>67552</td>\n",
+       "      <td>2472</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32273</th>\n",
+       "      <td>2020-04-04</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>0</td>\n",
+       "      <td>63307</td>\n",
+       "      <td>2254</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29882</th>\n",
+       "      <td>2020-04-03</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>0</td>\n",
+       "      <td>57160</td>\n",
+       "      <td>1867</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27559</th>\n",
+       "      <td>2020-04-02</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>0</td>\n",
+       "      <td>51810</td>\n",
+       "      <td>1562</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -532,73 +661,73 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8202</th>\n",
-       "      <td>2020-03-22</td>\n",
-       "      <td>Spokane</td>\n",
-       "      <td>Washington</td>\n",
-       "      <td>53063</td>\n",
-       "      <td>20</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8200</th>\n",
-       "      <td>2020-03-22</td>\n",
-       "      <td>Skagit</td>\n",
-       "      <td>Washington</td>\n",
-       "      <td>53057</td>\n",
-       "      <td>34</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8199</th>\n",
-       "      <td>2020-03-22</td>\n",
-       "      <td>San Juan</td>\n",
-       "      <td>Washington</td>\n",
-       "      <td>53055</td>\n",
+       "      <th>13178</th>\n",
+       "      <td>2020-03-26</td>\n",
+       "      <td>Humphreys</td>\n",
+       "      <td>Mississippi</td>\n",
+       "      <td>28053</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8197</th>\n",
-       "      <td>2020-03-22</td>\n",
-       "      <td>Mason</td>\n",
-       "      <td>Washington</td>\n",
-       "      <td>53045</td>\n",
-       "      <td>1</td>\n",
+       "      <th>13176</th>\n",
+       "      <td>2020-03-26</td>\n",
+       "      <td>Hinds</td>\n",
+       "      <td>Mississippi</td>\n",
+       "      <td>28049</td>\n",
+       "      <td>43</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23966</th>\n",
-       "      <td>2020-03-31</td>\n",
+       "      <th>13175</th>\n",
+       "      <td>2020-03-26</td>\n",
+       "      <td>Harrison</td>\n",
+       "      <td>Mississippi</td>\n",
+       "      <td>28047</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13173</th>\n",
+       "      <td>2020-03-26</td>\n",
+       "      <td>Grenada</td>\n",
+       "      <td>Mississippi</td>\n",
+       "      <td>28043</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38196</th>\n",
+       "      <td>2020-04-06</td>\n",
        "      <td>Washakie</td>\n",
        "      <td>Wyoming</td>\n",
        "      <td>56043</td>\n",
-       "      <td>1</td>\n",
+       "      <td>4</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>23601 rows × 6 columns</p>\n",
+       "<p>37703 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "             date    county       state   fips  cases  deaths\n",
-       "21692  2020-03-30      King  Washington  53033   2332     152\n",
-       "23855  2020-03-31      King  Washington  53033   2332     152\n",
-       "19611  2020-03-29      King  Washington  53033   2163     146\n",
-       "17632  2020-03-28      King  Washington  53033   2079     138\n",
-       "15740  2020-03-27      King  Washington  53033   1830     127\n",
-       "...           ...       ...         ...    ...    ...     ...\n",
-       "8202   2020-03-22   Spokane  Washington  53063     20       0\n",
-       "8200   2020-03-22    Skagit  Washington  53057     34       0\n",
-       "8199   2020-03-22  San Juan  Washington  53055      1       0\n",
-       "8197   2020-03-22     Mason  Washington  53045      1       0\n",
-       "23966  2020-03-31  Washakie     Wyoming  56043      1       0\n",
+       "             date         county        state   fips  cases  deaths\n",
+       "37185  2020-04-06  New York City     New York      0  68776    2738\n",
+       "34709  2020-04-05  New York City     New York      0  67552    2472\n",
+       "32273  2020-04-04  New York City     New York      0  63307    2254\n",
+       "29882  2020-04-03  New York City     New York      0  57160    1867\n",
+       "27559  2020-04-02  New York City     New York      0  51810    1562\n",
+       "...           ...            ...          ...    ...    ...     ...\n",
+       "13178  2020-03-26      Humphreys  Mississippi  28053      1       0\n",
+       "13176  2020-03-26          Hinds  Mississippi  28049     43       0\n",
+       "13175  2020-03-26       Harrison  Mississippi  28047     31       0\n",
+       "13173  2020-03-26        Grenada  Mississippi  28043      2       0\n",
+       "38196  2020-04-06       Washakie      Wyoming  56043      4       0\n",
        "\n",
-       "[23601 rows x 6 columns]"
+       "[37703 rows x 6 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,6 +735,20 @@
    "source": [
     "df_nytCountyData.sort_values(\"deaths\",ascending=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now I still need to figure out the spatial assignment, maybe I should have used kings county"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
