--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,10 @@
     "import ipywidgets as widgets\n",
     "from ipywidgets import interact, interact_manual\n",
     "from celluloid import Camera\n",
-    "import os"
+    "import os\n",
+    "import scipy.stats as stats\n",
+    "import time\n",
+    "from ipypb import track"
    ]
   },
   {
@@ -703,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +1007,7 @@
        "[2469 rows x 15 columns]"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1015,21 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1052,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1060,20 +1049,20 @@
     "    fig,ax = plt.subplots(figsize=(50,20))\n",
     "    divider = make_axes_locatable(ax)\n",
     "    cax = divider.append_axes(\"right\", size=\"5%\", pad=0.1)\n",
-    "    filterByDate(gdf_countyTimeSeries,year=year,month=month,day=day).cx[-125:-50, 20:70].plot(\"cases\",ax=ax,cax=cax,legend=\"True\")\n",
+    "    filterByDate(gdf_countyTimeSeriesDiff,year=year,month=month,day=day).cx[-125:-50, 20:70].plot(\"cases\",ax=ax,cax=cax,legend=\"True\")\n",
     "    gdf_USStates.boundary.cx[-125:-50, 20:70].plot(ax=ax)\n",
     "    ax.set_title(f\"Number of confirmed COVID-19 Cases, {month}-{day}-{year}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ab1fa5e13364bd0a0e12ae9a24c06ba",
+       "model_id": "37e3162d771e494ea91b80c053dd507c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1090,7 +1079,7 @@
        "<function __main__.plotController(month=3, day=1, year=2020)>"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
