setting up parameters

--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -1333,6 +1333,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Let's set up a Bayesian Parameter Estimator"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$S(t+\\Delta t) = S(t) - \\beta S(t)I(t)\\Delta t$$\n",
+    "\n",
+    "$$I(t+\\Delta t) = I(t) + \\beta S(t)I(t)\\Delta t - \\gamma I(t)\\Delta t$$\n",
+    "\n",
+    "$$\\mathbf{R}_0 = \\frac{\\beta N}{\\gamma}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "|Parameter|Interpretation|Value|References|\n",
+    "|---|---|---|---|\n",
+    "|$N$|County Population|2019 Estimate|DHS|\n",
+    "|$\\mathbf{R}_0$|Basic Reproduction Number|$\\sim N(2.5,\\sigma^2=1.5)$|Judgement|\n",
+    "|$\\beta$|Transmission Rate Per Capita|$\\sim N(1,\\sigma^2=1)$|Judgement|\n",
+    "|$\\gamma$|Recovery Rate|$\\sim N(1,\\sigma^2=1)$|Judgement|"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
