ready to set up code

--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -1357,9 +1357,11 @@
     "|Parameter|Interpretation|Value|References|\n",
     "|---|---|---|---|\n",
     "|$N$|County Population|2019 Estimate|DHS|\n",
+    "|$N_I$|Initial Infected Population|Fixed|Judgement|\n",
     "|$\\mathbf{R}_0$|Basic Reproduction Number|$\\sim N(2.5,\\sigma^2=1.5)$|Judgement|\n",
     "|$\\beta$|Transmission Rate Per Capita|$\\sim N(1,\\sigma^2=1)$|Judgement|\n",
-    "|$\\gamma$|Recovery Rate|$\\sim N(1,\\sigma^2=1)$|Judgement|"
+    "|$\\gamma$|Recovery Rate|$\\sim N(1,\\sigma^2=1)$|Judgement|\n",
+    "|$f$|Fatality Fraction|$\\sim N(1,\\sigma^2=1)$|Judgement|"
    ]
   },
   {
