starting to set up simulation engine

--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -1366,6 +1366,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def SIR(N,I=10,Δt=0.1,startDate=dt.datetime(year=2020,month=3,day=1),endDate=dt.datetime(year=2020,month=4,day=7)):\n",
+    "    I = 1\n",
+    "    S = N\n",
+    "    Is = [I]\n",
+    "    Ss = [S]\n",
+    "    ts = np.arange(0,100,Δt)\n",
+    "    for t in ts:\n",
+    "        if S < 0:\n",
+    "            S = 0\n",
+    "        if I < 0:\n",
+    "            I = 0\n",
+    "        S_new = S - β * S * I * Δt\n",
+    "        I_new = I + β * S * I * Δt - γ * I * Δt\n",
+    "        S = S_new\n",
+    "        I = I_new\n",
+    "        Ss.append(S)\n",
+    "        Is.append(I)\n",
+    "    del Ss[-1] # kludge because for loop is not inclusive\n",
+    "    del Is[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
