--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -1370,7 +1370,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def SIR(N,I=10,Δt=0.1,startDate=dt.datetime(year=2020,month=3,day=1),endDate=dt.datetime(year=2020,month=4,day=7)):\n",
+    "def SIR(fips,N,β,R0,γ,f,I=10,Δt=0.1,startDate=dt.datetime(year=2020,month=3,day=1),endDate=dt.datetime(year=2020,month=4,day=7)):\n",
     "    I = 1\n",
     "    S = N\n",
     "    Is = [I]\n",
