--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -1400,11 +1400,12 @@
    "source": [
     "def SIR(fips,N,β,R0,γ,f,I=10,Δt=0.1,startDate=dt.datetime(year=2020,month=3,day=1),endDate=dt.datetime(year=2020,month=4,day=7)):\n",
     "    # look up county population\n",
+    "    nDays = (endDate-startDate).days\n",
     "    I = 1\n",
     "    S = N\n",
     "    Is = [I]\n",
     "    Ss = [S]\n",
-    "    ts = np.arange(0,100,Δt)\n",
+    "    ts = np.arange(0,nDays,Δt)\n",
     "    for t in ts:\n",
     "        if S < 0:\n",
     "            S = 0\n",
@@ -1418,6 +1419,37 @@
     "        Is.append(I)\n",
     "    del Ss[-1] # kludge because for loop is not inclusive\n",
     "    del Is[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 293,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Δt=0.1\n",
+    "startDate=dt.datetime(year=2020,month=3,day=1)\n",
+    "endDate=dt.datetime(year=2020,month=4,day=7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 295,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "37"
+      ]
+     },
+     "execution_count": 295,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(endDate-startDate).days"
    ]
   },
   {
