not perfect but it's working

--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -1394,13 +1394,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def SIR(fips,N,β,R0,γ,f,I=10,Δt=0.1,startDate=dt.datetime(year=2020,month=3,day=1),endDate=dt.datetime(year=2020,month=4,day=7)):\n",
+    "def SIR(fips,N,R0,γ,f,I=10,Δt=0.1,startDate=dt.datetime(year=2020,month=3,day=1),endDate=dt.datetime(year=2020,month=4,day=7)):\n",
     "    # look up county population\n",
     "    nDays = (endDate-startDate).days\n",
+    "    dates = [startDate + dt.timedelta(days=x) for x in range(nDays)]\n",
+    "    β = R0 * γ / N # Transmission rate per capita\n",
     "    I = 1\n",
     "    S = N\n",
     "    Is = [I]\n",
@@ -1418,12 +1420,322 @@
     "        Ss.append(S)\n",
     "        Is.append(I)\n",
     "    del Ss[-1] # kludge because for loop is not inclusive\n",
-    "    del Is[-1]"
+    "    del Is[-1]\n",
+    "    df = pd.DataFrame({\"date\":dates,\"I\":Is[0::int(1/Δt)],\"S\":Ss[0::int(1/Δt)]})\n",
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 318,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>I</th>\n",
+       "      <th>S</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-03-01</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>200000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-03-02</td>\n",
+       "      <td>1.112459</td>\n",
+       "      <td>199999.812568</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-03-03</td>\n",
+       "      <td>1.237565</td>\n",
+       "      <td>199999.604058</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-03-04</td>\n",
+       "      <td>1.376740</td>\n",
+       "      <td>199999.372100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-03-05</td>\n",
+       "      <td>1.531565</td>\n",
+       "      <td>199999.114056</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2020-03-06</td>\n",
+       "      <td>1.703802</td>\n",
+       "      <td>199998.826994</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2020-03-07</td>\n",
+       "      <td>1.895408</td>\n",
+       "      <td>199998.507649</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2020-03-08</td>\n",
+       "      <td>2.108561</td>\n",
+       "      <td>199998.152393</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2020-03-09</td>\n",
+       "      <td>2.345684</td>\n",
+       "      <td>199997.757186</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2020-03-10</td>\n",
+       "      <td>2.609471</td>\n",
+       "      <td>199997.317536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2020-03-11</td>\n",
+       "      <td>2.902923</td>\n",
+       "      <td>199996.828446</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2020-03-12</td>\n",
+       "      <td>3.229373</td>\n",
+       "      <td>199996.284356</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2020-03-13</td>\n",
+       "      <td>3.592532</td>\n",
+       "      <td>199995.679082</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2020-03-14</td>\n",
+       "      <td>3.996529</td>\n",
+       "      <td>199995.005744</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2020-03-15</td>\n",
+       "      <td>4.445954</td>\n",
+       "      <td>199994.256689</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2020-03-16</td>\n",
+       "      <td>4.945915</td>\n",
+       "      <td>199993.423403</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2020-03-17</td>\n",
+       "      <td>5.502094</td>\n",
+       "      <td>199992.496416</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2020-03-18</td>\n",
+       "      <td>6.120812</td>\n",
+       "      <td>199991.465193</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>2020-03-19</td>\n",
+       "      <td>6.809098</td>\n",
+       "      <td>199990.318015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>2020-03-20</td>\n",
+       "      <td>7.574774</td>\n",
+       "      <td>199989.041844</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>2020-03-21</td>\n",
+       "      <td>8.426540</td>\n",
+       "      <td>199987.622179</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>2020-03-22</td>\n",
+       "      <td>9.374073</td>\n",
+       "      <td>199986.042889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>2020-03-23</td>\n",
+       "      <td>10.428137</td>\n",
+       "      <td>199984.286030</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>2020-03-24</td>\n",
+       "      <td>11.600705</td>\n",
+       "      <td>199982.331641</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>2020-03-25</td>\n",
+       "      <td>12.905098</td>\n",
+       "      <td>199980.157518</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>2020-03-26</td>\n",
+       "      <td>14.356128</td>\n",
+       "      <td>199977.738966</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>2020-03-27</td>\n",
+       "      <td>15.970274</td>\n",
+       "      <td>199975.048512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>2020-03-28</td>\n",
+       "      <td>17.765864</td>\n",
+       "      <td>199972.055600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>2020-03-29</td>\n",
+       "      <td>19.763283</td>\n",
+       "      <td>199968.726242</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>2020-03-30</td>\n",
+       "      <td>21.985204</td>\n",
+       "      <td>199965.022633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>2020-03-31</td>\n",
+       "      <td>24.456844</td>\n",
+       "      <td>199960.902726</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>2020-04-01</td>\n",
+       "      <td>27.206250</td>\n",
+       "      <td>199956.319754</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>2020-04-02</td>\n",
+       "      <td>30.264612</td>\n",
+       "      <td>199951.221703</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>2020-04-03</td>\n",
+       "      <td>33.666617</td>\n",
+       "      <td>199945.550724</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>2020-04-04</td>\n",
+       "      <td>37.450840</td>\n",
+       "      <td>199939.242481</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>2020-04-05</td>\n",
+       "      <td>41.660176</td>\n",
+       "      <td>199932.225425</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>2020-04-06</td>\n",
+       "      <td>46.342326</td>\n",
+       "      <td>199924.419987</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         date          I              S\n",
+       "0  2020-03-01   1.000000  200000.000000\n",
+       "1  2020-03-02   1.112459  199999.812568\n",
+       "2  2020-03-03   1.237565  199999.604058\n",
+       "3  2020-03-04   1.376740  199999.372100\n",
+       "4  2020-03-05   1.531565  199999.114056\n",
+       "5  2020-03-06   1.703802  199998.826994\n",
+       "6  2020-03-07   1.895408  199998.507649\n",
+       "7  2020-03-08   2.108561  199998.152393\n",
+       "8  2020-03-09   2.345684  199997.757186\n",
+       "9  2020-03-10   2.609471  199997.317536\n",
+       "10 2020-03-11   2.902923  199996.828446\n",
+       "11 2020-03-12   3.229373  199996.284356\n",
+       "12 2020-03-13   3.592532  199995.679082\n",
+       "13 2020-03-14   3.996529  199995.005744\n",
+       "14 2020-03-15   4.445954  199994.256689\n",
+       "15 2020-03-16   4.945915  199993.423403\n",
+       "16 2020-03-17   5.502094  199992.496416\n",
+       "17 2020-03-18   6.120812  199991.465193\n",
+       "18 2020-03-19   6.809098  199990.318015\n",
+       "19 2020-03-20   7.574774  199989.041844\n",
+       "20 2020-03-21   8.426540  199987.622179\n",
+       "21 2020-03-22   9.374073  199986.042889\n",
+       "22 2020-03-23  10.428137  199984.286030\n",
+       "23 2020-03-24  11.600705  199982.331641\n",
+       "24 2020-03-25  12.905098  199980.157518\n",
+       "25 2020-03-26  14.356128  199977.738966\n",
+       "26 2020-03-27  15.970274  199975.048512\n",
+       "27 2020-03-28  17.765864  199972.055600\n",
+       "28 2020-03-29  19.763283  199968.726242\n",
+       "29 2020-03-30  21.985204  199965.022633\n",
+       "30 2020-03-31  24.456844  199960.902726\n",
+       "31 2020-04-01  27.206250  199956.319754\n",
+       "32 2020-04-02  30.264612  199951.221703\n",
+       "33 2020-04-03  33.666617  199945.550724\n",
+       "34 2020-04-04  37.450840  199939.242481\n",
+       "35 2020-04-05  41.660176  199932.225425\n",
+       "36 2020-04-06  46.342326  199924.419987"
+      ]
+     },
+     "execution_count": 318,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SIR(1,200000,2.5,1/14.0,0.02)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 310,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1434,22 +1746,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 311,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "37"
-      ]
-     },
-     "execution_count": 295,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "(endDate-startDate).days"
+    "nDays = (endDate-startDate).days"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 312,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dates = [startDate + dt.timedelta(days=x) for x in range(nDays)]"
    ]
   },
   {
