added signatures for two more functions

--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -1593,6 +1593,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getCountyPopulation(fips):\n",
+    "    return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getCountyCOVIDData(fips):\n",
+    "    return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 63,
    "metadata": {},
    "outputs": [],
