--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -1603,12 +1603,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
     "def getCountyCOVIDData(fips):\n",
-    "    return 0"
+    "    df = gdf_countyTimeSeriesDiff[gdf_countyTimeSeriesDiff[\"fips\"]==fips].set_index(\"date\")\n",
+    "    return df[[\"cases\",\"deaths\",\"new cases\",\"new deaths\"]]"
    ]
   },
   {
