--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -1593,12 +1593,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "def getCountyPopulation(fips):\n",
-    "    return 0"
+    "    return gdf_countyTimeSeriesDiff[gdf_countyTimeSeriesDiff[\"fips\"]==fips][\"POPESTIMATE2019\"].iloc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "822083"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "getCountyPopulation(fips)"
    ]
   },
   {
